# tichy-strings

./: CMakeLists.txt  LICENSE  README.md
example/: udhr_english.txt  udhr_scots.txt
include/: tichy_strings.h  vcdiff.h
src/: CMakeLists.txt  error_handling.c  error_handling.h  tichy_minimal_covering.c  tichy_strings.c  vcdiff.c  vcdiff_cache.c  vcdiff_cache.h  vcdiff_code_table.c  vcdiff_code_table.h  vcdiff_encoder.c  vcdiff_encoder.h  vcdiff_io.c  vcdiff_io.h  vcdiff_window.c  vcdiff_window.h
tests/: CMakeLists.txt  test_tichy_sets.c  test_tichy_strings.c  test_tichy_strings.h  test_tichy_translate.c  test_vcdiff_cache.c  test_vcdiff_code_table.c  test_vcdiff_encoder.c  test_vcdiff_file_allocation.c  test_vcdiff_io.c  test_vcdiff_window.c
tichydiff/: CMakeLists.txt  main.c
